# arnold

./: AGENTS.md  PLAN.md  README.md  first_prompt.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_deck.json
src/arnold/: __init__.py  __main__.py  cli.py  decks.py  models.py  scheduler.py  state.py  web.py
src/arnold/templates/: base.html  study.html  study_pane.html
tests/: conftest.py  test_decks.py  test_scheduler.py  test_state.py  test_web.py
