[project]
name = "arnold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Hayeck", email = "nick.hayeck@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "htmx>=0.0.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "typer>=0.21.1",
]

[project.scripts]
arnold = "arnold.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
