[project]
name = "arnold"
version = "1.1.0"
description = "A lightweight, local-first, Anki-like web study tool."
readme = "README.md"
authors = [
    { name = "Nick Hayeck", email = "nick.hayeck@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
arnold = "arnold.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arnold"]

[tool.hatch.build.targets.wheel.force-include]
"src/arnold/templates" = "arnold/templates"
"src/arnold/py.typed" = "arnold/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/AGENTS.md",
    "/PLAN.md",
    "/examples",
]
